--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -6,7 +6,7 @@
 // Colors
 $black: #000;
 $gray: #666;
-$light-gray: #eeeeee66;
+$light-gray: #e6e6e6;
 $red: #a90533;
 $white: #fff;
 
@@ -27,19 +27,19 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
 	margin-top: 0.2em;
-  font-size: 3em;
+  font-size: 2.8em;
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 1.8em;
 }
 
 h3 {
-  font-size: 1.6em;
+  font-size: 1.55em;
 }
 
 h4 {
-  font-size: 1.5em;
+  font-size: 1.45em;
 }
 
 h5 {
@@ -50,13 +50,35 @@ h6 {
   font-size: 1.1em;
 }
 
+p, code, span, table, dd, dt {
+  font-size: 0.95em;
+}
+
+a {
+  color: $red;
+}
+
+p.subscript {
+  float: left;
+  clear: left;
+  font-style: italic;
+  color: adjust-lightness($gray, -20);
+  margin: -6px 0 10px 0;
+}
+
 code {
   font-family: Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace;
   background: $light-gray;
+  color: adjust-lightness($red, -5);
+  font-weight: 600;
 
   border-radius: 4px;
-  padding: 2px;
+  padding: 0px 3px;
   display: inline-block;
+}
+
+.credit a {
+  font-weight: bold;
 }
 
 // Layout
@@ -86,12 +108,20 @@ body {
   float: left;
   clear: left;
 }
+
 #trapping-exits {
   display: block;
   clear: left;
 }
 
+#footer {
+  padding: 1em 0;
+  float: right;
+}
+
+
 table {
+  margin-bottom: 0.5em;
   $table-color: $red;
   @include table-scaffolding;
 
@@ -124,5 +154,8 @@ table {
 
 dt, dd {
   float: left;
-  padding-right: 10px;
+  margin-right: 0.2em;
+}
+dd {
+  margin-right: 1em;
 }
