Misc. fixes to cheatsheet styling

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -66,6 +66,10 @@ a {
   margin: -6px 0 10px 0;
 }
 
+div.paragraph {
+  margin-bottom: 0;
+}
+
 code {
   font-family: Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace;
   background: $light-gray;
